--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "node-mail",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cheerio": "^1.0.0-rc.2",
-    "ejs": "^2.5.7",
-    "node-schedule": "^1.2.5",
-    "nodemailer": "^4.4.0",
-    "superagent": "^3.8.1"
-  }
+    "name": "node-mail",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "NODE_ENV=dev && node main.js",
+        "start": "NODE_ENV=prod && node main.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "cheerio": "^1.0.0-rc.2",
+        "ejs": "^2.5.7",
+        "node-schedule": "^1.2.5",
+        "nodemailer": "^4.4.0",
+        "superagent": "^3.8.1"
+    }
 }
